--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -48,6 +48,11 @@ $font-size: 12px;
   .el-input__icon{
     width: 24px;
   }
+  .el-popover {
+    width: 400px !important;
+    max-height:300px;
+    overflow:auto; 
+  }
   #app {
   	textarea {
   		height: auto !important;
@@ -57,8 +62,5 @@ $font-size: 12px;
   }
   .app-shrink {
   	width: 526px !important;
-  }
-  .el-popover {
-  	width: 400px !important;
   }
   }
