--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -15,7 +15,7 @@ $font-size: 12px;
 	padding: 6px 8px;
 }
 .table-search {
-	width: 150px !important;
+	max-width: 150px !important;
 }
 .search-content {
 	font-size: 12px !important;
@@ -53,6 +53,15 @@ $font-size: 12px;
     max-height:300px;
     overflow:auto; 
   }
+  .logo_name {
+  font-size: 16px !important;
+  height: 24px !important;
+  line-height: 24px !important;
+  display: inline-block;
+  }
+  .app-shrink-head span.fs{
+    font-size: 16px !important;
+  }
   #app {
   	textarea {
   		height: auto !important;
@@ -61,6 +70,6 @@ $font-size: 12px;
     width: 700px !important;
   }
   .app-shrink {
-  	width: 526px !important;
+  	width: 834px !important;
   }
   }
