--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -81,7 +81,7 @@ $font-size: 12px;
   }
   #app {
   	textarea {
-  		height: auto !important;
+  		height: 54px !important;
   	}
   .dialog-medium .el-dialog {
     width: 700px !important;
